# CPTV

./: README.md
5EBin/Input/AccSpectrum/: h1dAccBkg22_AS_org_EH1AD1.root  h1dAccBkg22_AS_org_EH1AD2.root  h1dAccBkg22_AS_org_EH2AD1.root  h1dAccBkg22_AS_org_EH2AD2.root  h1dAccBkg22_AS_org_EH3AD1.root  h1dAccBkg22_AS_org_EH3AD2.root  h1dAccBkg22_AS_org_EH3AD3.root  h1dAccBkg22_AS_org_EH3AD4.root
5EBin/Input/Li9He8Spectrum/: He8_beta_neutron.root  Li9_beta_neutron.root
5EBin/Input/P14A_Info/: P14A_GdEH2.txt  P14A_GdEH3.txt  eff_info_EH2.txt  info_6ad.txt  info_8ad.txt  info_8ad_EH2.txt  info_8ad_EH3.txt  info_P14a.txt
5EBin/SiderealTime/: FindBad.C  HMuG5.root  IBD.C  IBD.root  InfoReader.C  LiveTime.root  NetMu.root  alphaBeta_FFT.C  nLike.C  nLike.root
OneEBin/FFT/: AdMu.root  FFTTest.C  Fraction.root  FullTime.root  HMuG10.root  HMuG15.root  HMuL5.root  IBD.C  IBD.root  SgLow.root  SgUp.root  alphaBeta.C
OneEBin/FFT/AmC/: AmC.C  (+4 more)
OneEBin/Input/Ostw/EH3/Fit/DBSensitivityLib/: Makefile.am  Makefile.in  MixingMatrix.h
OneEBin/Input/Ostw/EH3/Fit/DBSensitivityLib/.svn/text-base/: DBSensitivityLibLinkDef.h.svn-base  InverseBetaCS.C.svn-base  Makefile.svn-base
OneEBin/SiderealTime/: AdMu.root  AlphaBeta.root  FindBad.C  FullTime.root  HMuG10.root  HMuG15.root  HMuG5.root  HMuL5.root  IBD.root  LiveTime.root  NetMu.root  SgLow.root  SgUp.root  nLike.root
OneEBin/SolarTime/: AdMu.root  FindBad.C  FullTime.root  HMuG10.root  HMuG15.root  HMuG5.root  HMuL5.root  IBD.C  IBD.root  InfoReader.C  LiveTime.root  NetMu.root  SgLow.root  SgUp.root  nLike.C  nLike.root
(+8582 files in other folders)
